--- a/styles/general.css
+++ b/styles/general.css
@@ -1,3 +1,6 @@
+/* IMPORT FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 /* GENERAL STYLES */
 *{
     padding: 0;
@@ -8,6 +11,7 @@
 /* VARIABLES */
 :root{
     --primary-color: #E15757;
+    --primary-color-between: #e1575785;
     --primary-color-light: #F8EDF6;
     --secondary-color-light: #E6EEF9;
 
@@ -21,25 +25,50 @@ body{
     background: linear-gradient(to top right, var(--primary-color-light) 50%, var(--secondary-color-light));
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Nunito", serif;
+    font-size: 20px;
 }
 
 /* FONTS */
 h1{
-    padding-top: var(--page-padding);
-    font-size: 24px;
+    font-size: 1.5em;
     font-weight: bold;
     width: 100%;
     text-align: center;
 }
 h2{
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 1em;
+    font-weight: normal;
     width: 100%;
     text-align: center;
 }
 
+/* TOP SECTION */
+section.top{
+    padding: var(--page-padding);
+}
 
-section{
-    padding: 10%;
+/* INPUT */
+input, button, textarea{
+    transition-duration: 0.2s;
+    outline: none;
+    border: none;
+    font-size: 1em;
+}
+input:focus, button:focus, textarea:focus {
+    box-shadow: 0 0 0px 3px var(--primary-color-between);
+}
+
+.wide{
+    width: 100%;
+}
+
+/* BUTTON */
+.btn-red{
+    background-color: var(--primary-color);
+    color: white;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
 }
