--- a/styles/general.css
+++ b/styles/general.css
@@ -11,22 +11,37 @@
 /* VARIABLES */
 :root{
     --primary-color: #E15757;
-    --primary-color-between: #e1575785;
-    --primary-color-light: #F8EDF6;
-    --secondary-color-light: #E6EEF9;
+    --primary-color-transparent: color-mix(in srgb, var(--primary-color), transparent 50%);
+    --primary-color-darker: color-mix(in srgb, var(--primary-color), black 20%);
+    --primary-color-lighter: color-mix(in srgb, var(--primary-color), white 92%);
+    
+    --secondary-color-lighter: #E6EEF9;
+
+    --error-color: #cc0000;
 
     --page-padding: 10%
+}
+@media (min-width: 650px) {
+    :root {
+        --page-padding: 50px;
+    }
 }
 
 /* MAIN BACKGROUND */
 body{
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top right, var(--primary-color-light) 50%, var(--secondary-color-light));
+    background: linear-gradient(to top right, var(--primary-color-lighter) 50%, var(--secondary-color-lighter));
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: "Nunito", serif;
     font-size: 20px;
+}
+
+/* CONTAINER */
+section.content{
+    width: 100%;
+    height: 100%;
 }
 
 /* FONTS */
@@ -48,7 +63,7 @@ section.top{
     padding: var(--page-padding);
 }
 
-/* INPUT */
+/* INPUTS */
 input, button, textarea{
     transition-duration: 0.2s;
     outline: none;
@@ -56,7 +71,7 @@ input, button, textarea{
     font-size: 1em;
 }
 input:focus, button:focus, textarea:focus {
-    box-shadow: 0 0 0px 3px var(--primary-color-between);
+    box-shadow: 0 0 0px 4px var(--primary-color-transparent);
 }
 
 .wide{
@@ -71,4 +86,42 @@ input:focus, button:focus, textarea:focus {
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    font-size: 1rem;
+}
+.btn-red:hover{
+    background-color: var(--primary-color-darker);
+}
+
+/* INPUT */
+input, textarea{
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 10px;
+    background-color: white;
+    border: 1px solid #e7e7e7;
+    box-shadow: 0px 0px 23.3px -10px rgba(0, 0, 0, 0.25);
+}
+input::placeholder, textarea::placeholder{
+    color: #ADADAD;
+}
+input:focus, textarea:focus{
+    border: 2px solid var(--primary-color);
+}
+
+/* LOADER */
+#loader {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    width: 100vw;
+    --c: no-repeat linear-gradient(var(--primary-color) 0 0);
+    background: var(--c),var(--c),var(--primary-color-lighter);
+    background-size: 60% 100%;
+    animation: l16 2s infinite;
+}
+@keyframes l16 {
+    0%   {background-position:-150% 0,-150% 0}
+    66%  {background-position: 250% 0,-150% 0}
+    100% {background-position: 250% 0, 250% 0}
 }
