--- a/styles/general.css
+++ b/styles/general.css
@@ -30,7 +30,8 @@
 /* MAIN BACKGROUND */
 body{
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    height: 100vh;
     background: linear-gradient(to top right, var(--primary-color-lighter) 50%, var(--secondary-color-lighter));
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -61,6 +62,7 @@ h2{
 /* TOP SECTION */
 section.top{
     padding: var(--page-padding);
+    width: 100%;
 }
 
 /* INPUTS */
@@ -90,6 +92,45 @@ input:focus, button:focus, textarea:focus {
 }
 .btn-red:hover{
     background-color: var(--primary-color-darker);
+}
+
+
+.btn-white{
+    box-shadow: 0px 0px 23.3px -10px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: white;
+    font-size: 1rem;
+    color: black;
+    position: relative;
+    padding: 10px;
+    border-radius: 15px;
+    border: 3px solid transparent;
+}
+.btn-white > div{
+    width: 45px;
+    height: 45px;
+    background-color: var(--primary-color-lighter);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+}
+.btn-white > div > span{
+    color: var(--primary-color);
+    font-size: 1.4rem;
+}
+.btn-white > span{
+    font-size: 1rem;
+    color: var(--primary-color);
+    position: absolute;
+    right: 30px;
+}
+.btn-white:hover, .btn-white:focus{
+    border: 3px solid var(--primary-color)
 }
 
 /* INPUT */
