--- a/styles/general.css
+++ b/styles/general.css
@@ -19,7 +19,7 @@
 
     --error-color: #cc0000;
 
-    --page-padding: 10%
+    --page-padding: 10vw; /* NE PAS METTRE DE POURCENTAGE, trop dépendant du contexte */
 }
 @media (min-width: 650px) {
     :root {
@@ -28,9 +28,6 @@
 }
 
 /* MAIN BACKGROUND */
-html{
-    width: 100vw;
-}
 body{
     width: 100%;
     min-height: 100vh;
@@ -45,7 +42,7 @@ body{
 /* CONTAINER */
 section.content{
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 /* FONTS */
