--- a/styles/account.css
+++ b/styles/account.css
@@ -1,9 +1,19 @@
+/* CONTENT */
+section.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* ACTIONS */
 section.actions{
     background-color: white;
     border-radius: 30px 30px 0 0;
     padding: 0 var(--page-padding) var(--page-padding) var(--page-padding);
     margin-top: calc(178px / 2);
+    position: relative;
+    width: 100%;
+    max-width: 600px;
 }
 
 section.actions .card{
