--- a/styles/general.css
+++ b/styles/general.css
@@ -20,6 +20,8 @@
     --error-color: #cc0000;
 
     --page-padding: 10vw; /* NE PAS METTRE DE POURCENTAGE, trop dépendant du contexte */
+
+    --shadow: 0px 0px 23.3px -10px rgba(0, 0, 0, 0.25);
 }
 @media (min-width: 650px) {
     :root {
@@ -95,7 +97,7 @@ input:focus, button:focus, textarea:focus {
 }
 
 .btn-white{
-    box-shadow: 0px 0px 23.3px -10px rgba(0, 0, 0, 0.25);
+    box-shadow: var(--shadow);
     display: flex;
     flex-direction: row;
     align-items: center;
