--- a/styles/card.css
+++ b/styles/card.css
@@ -1,91 +1,65 @@
-.card{
-    width: 318px;
-    height: 178px;
-    border-radius: 20px;
-    background: linear-gradient(115deg, var(--primary-color) 37.78%, var(--primary-color-lighter) 192.62%);
-    box-shadow: 0px 0px 12.2px 0px rgba(0, 0, 0, 0.25);
+/* CONTENT */
+section.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
-    overflow: hidden;
-    --padding: 25px;
-    font-family: 'Roboto', sans-serif;
 }
-.card::after{
-    content: '';
+
+/* ACTIONS */
+section.actions{
     position: absolute;
-    width: 114px;
-    height: 229px;
-    transform: rotate(17deg);
-    top: -25px;
-    left: 30px;
-    background: rgba(0, 0, 0, 0.06);
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    background-color: white;
+    border-radius: 30px 30px 0 0;
+    padding: 0 var(--page-padding) var(--page-padding) var(--page-padding);
+    margin-top: calc(178px / 2);
+    width: 100%;
+    max-width: 600px;
+    opacity: 0;
 }
-.card::before{
-    content: '';
-    position: absolute;
-    width: 60px;
-    height: 229px;
-    transform: rotate(-17deg);
-    top: -25px;
-    left: 30px;
-    background: rgba(255, 255, 255, 0.06);
-    animation: card-light ease-out 3s infinite;
+section.actions.showed{
+    animation: sec_in 0.8s ease forwards;
 }
-@keyframes card-light{
-    0%{
-        left: -100%;
+@keyframes sec_in {
+    from{
+        opacity: 0.0;
+        transform: translate(-50%, 100px);
     }
-    70%{
-        left: 120%;
-    }
-    100%{
-        left: 120%;
+    to{
+        opacity: 1;
+        transform: translate(-50%, 0);
     }
 }
 
-.card .card-names{
+section.actions .card{
     position: absolute;
-    top: var(--padding);
-    left: var(--padding);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
 }
-.card .card-names > p{
-    color: white;
-    font-size: 1rem;
+section.actions.showed .card{
+    animation: card_in 0.8s ease forwards;
 }
-.card .card-names > p:first-child{
-    text-transform: uppercase;
-    font-weight: bold;
+@keyframes card_in {
+    from{
+        opacity: 0;
+        transform: translate(-50%, -25%);
+    }
+    to{
+        opacity: 1;
+        transform: translate(-50%, -50);
+    }
+    
 }
-.card .card-names > p:last-child{
-    text-transform: capitalize;
+section.actions .card-spacer{
+    height: calc(178px / 2 + var(--page-padding));
 }
 
-.card .card-sold{
-    position: absolute;
-    top: var(--padding);
-    right: var(--padding);
-    color: white;
-    font-size: 1.8rem;
-    text-align: right;
-    font-weight: bold;
-}
-
-.card .card-id {
-    position: absolute;
-    bottom: var(--padding);
-    left: var(--padding);
-    color: rgba(250, 250, 250, 0.7);
-    font-size: 0.9rem;
-    font-weight: lighter;
-    text-transform: uppercase;
-}
-
-.card .card-orga{
-    position: absolute;
-    bottom: var(--padding);
-    right: var(--padding);
-    color: white;
-    font-size: 0.9rem;
-    font-weight: normal;
-    text-transform: uppercase;
-    text-align: right;
+.btns{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
