--- a/styles/general.css
+++ b/styles/general.css
@@ -33,8 +33,6 @@
 body{
     width: 100%;
     min-height: 100dvh;
-    height: 100dvh;
-    overflow-y: hidden;
     background: linear-gradient(to top right, var(--primary-color-lighter) 50%, var(--secondary-color-lighter));
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -45,21 +43,23 @@ body{
 /* CONTAINER */
 section.content{
     width: 100%;
-    min-height: 100%;
+    min-height: 100dvh;
 }
 
 /* FONTS */
-h1{
+h2{
     font-size: 1.5em;
     font-weight: bold;
     width: 100%;
     text-align: center;
+    font-family: "Roboto", sans-serif;
 }
-h2{
+h1{
     font-size: 1em;
     font-weight: normal;
     width: 100%;
     text-align: center;
+    font-family: "Roboto", sans-serif;
 }
 
 /* TOP SECTION */
