--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -21,9 +21,10 @@ section.graph-container{
     background-color: white;
     border-radius: 15px;
     box-shadow: 0px 0px 23.3px -10px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
 }
 .graph-title{
-    font-size: 1em;
+    font-size: 1rem;
     width: 100%;
     text-align: center;
     margin-bottom: 20px;
@@ -34,7 +35,7 @@ section.graph-container{
     padding: 0 20px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: flex-end;
     gap: 10px;
     overflow-x: auto;
@@ -49,7 +50,7 @@ section.graph-container{
 }
 .columns .column .label{
     margin-top: 10px;
-    font-size: 0.8em;
+    font-size: 0.8rem;
 }
 .columns .column .col{
     width: 15px;
