--- a/styles/general.css
+++ b/styles/general.css
@@ -37,7 +37,7 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: "Nunito", serif;
-    font-size: 20px;
+    font-size: 2vw;
 }
 
 /* CONTAINER */
@@ -48,14 +48,15 @@ section.content{
 
 /* FONTS */
 h2{
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: bold;
     width: 100%;
     text-align: center;
     font-family: "Roboto", sans-serif;
 }
 h1{
-    font-size: 1em;
+    margin-top: 8px;
+    font-size: 1.2rem;
     font-weight: normal;
     width: 100%;
     text-align: center;
@@ -157,6 +158,9 @@ input:focus, button:focus, textarea:focus {
     margin: 0;
     background-color: transparent;
 }
+.btn-white.only-icon{
+    padding: 0;
+}
 
 /* INPUT */
 input, textarea{
@@ -194,7 +198,6 @@ input:focus, textarea:focus{
 
 /* BACK */
 #back{
-    padding: 0;
     position: fixed;
     top: var(--page-padding);
     left: var(--page-padding);
