--- a/styles/card.css
+++ b/styles/card.css
@@ -18,10 +18,13 @@ section.actions{
     margin-top: calc(178px / 2);
     width: 100%;
     max-width: 600px;
+    
     opacity: 0;
+    z-index: -1;
 }
 section.actions.showed{
     animation: sec_in 0.8s ease forwards;
+    z-index: 1;
 }
 @keyframes sec_in {
     from{
