--- a/styles/card404.css
+++ b/styles/card404.css
@@ -26,7 +26,7 @@ section.content{
     padding: 5px;
     width: 50px;
     display: inline-block;
-    font-size: 2em;
+    font-size: 2rem;
     height: 50px;
     text-align: center;
     border-radius: 10px;
