--- a/styles/general.css
+++ b/styles/general.css
@@ -6,6 +6,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
 }
 
 /* VARIABLES */
@@ -22,6 +23,8 @@
     --page-padding: 10vw; /* NE PAS METTRE DE POURCENTAGE, trop dépendant du contexte */
 
     --shadow: 0px 0px 23.3px -10px rgba(0, 0, 0, 0.25);
+
+    --size-threshold: 600px; 
 }
 @media (min-width: 650px) {
     :root {
@@ -74,7 +77,7 @@ input, button, textarea{
     transition-duration: 0.2s;
     outline: none;
     border: none;
-    font-size: 1em;
+    font-size: 1rem;
 }
 input:focus, button:focus, textarea:focus {
     box-shadow: 0 0 0px 4px var(--primary-color-transparent);
@@ -89,7 +92,7 @@ input:focus, button:focus, textarea:focus {
     font-family: 'Material Symbols Outlined';
 }
 .btn-white > span.icon, .btn-red > span.icon{
-    font-size: 1.5em;
+    font-size: 1.5rem;
     min-width: 50px;
     min-height: 50px;
 }
