--- a/styles/modals.css
+++ b/styles/modals.css
@@ -5,13 +5,12 @@
     transform: translateX(-50%);
     bottom: 0;
     width: 100%;
-    max-width: 500px;
-    height: 100%;
+    max-width: var(--size-threshold);
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    overflow-y: hidden;
 }
 
 /* MODAL DIV */
@@ -24,6 +23,7 @@
     background-color: white;
     border-radius: 30px 30px 0 0;
     text-align: center;
+    box-shadow: var(--shadow);
 
     transition: ease 0.7s;
 
