--- a/styles/card.css
+++ b/styles/card.css
@@ -3,14 +3,13 @@ section.content{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     position: relative;
 }
 
 /* ACTIONS */
 section.actions{
-    position: absolute;
     left: 50%;
-    transform: translateX(-50%);
     bottom: 0;
     background-color: white;
     border-radius: 30px 30px 0 0;
@@ -29,11 +28,11 @@ section.actions.showed{
 @keyframes sec_in {
     from{
         opacity: 0.0;
-        transform: translate(-50%, 100px);
+        transform: translate(0, 100px);
     }
     to{
         opacity: 1;
-        transform: translate(-50%, 0);
+        transform: translate(0, 0);
     }
 }
 
