--- a/styles/general.css
+++ b/styles/general.css
@@ -32,6 +32,11 @@
     }
 }
 
+/* FONT SIZE */
+html{
+    font-size: 16px;
+}
+
 /* MAIN BACKGROUND */
 body{
     width: 100%;
@@ -40,7 +45,6 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: "Nunito", serif;
-    font-size: 2vw;
 }
 
 /* CONTAINER */
@@ -92,7 +96,7 @@ input:focus, button:focus, textarea:focus {
     font-family: 'Material Symbols Outlined';
 }
 .btn-white > span.icon, .btn-red > span.icon{
-    font-size: 1.5rem;
+    font-size: 25px;
     min-width: 50px;
     min-height: 50px;
 }
@@ -157,7 +161,7 @@ input:focus, button:focus, textarea:focus {
     font-family: 'Material Symbols Outlined';
     display: inline-block;
     vertical-align: middle;
-    font-size: 1rem;
+    font-size: 16px;
     color: var(--primary-color);
     position: absolute;
     right: 20px;
