--- a/styles/general.css
+++ b/styles/general.css
@@ -86,6 +86,9 @@ input, button, textarea{
 input:focus, button:focus, textarea:focus {
     box-shadow: 0 0 0px 4px var(--primary-color-transparent);
 }
+.btn-red.green:focus{
+    box-shadow: 0 0 0px 4px #10841057 !important;
+}
 
 .wide{
     width: 100%;
@@ -118,6 +121,12 @@ input:focus, button:focus, textarea:focus {
 }
 .btn-red:hover{
     background-color: var(--primary-color-darker);
+}
+.btn-red.green{
+    background-color: #108410;
+}
+.btn-red.green:hover{
+    background-color: #0A6A0A;
 }
 .btn-red > span{
     margin-right: 10px;
