--- a/styles/modals.css
+++ b/styles/modals.css
@@ -25,7 +25,7 @@
     text-align: center;
     box-shadow: var(--shadow);
 
-    transition: ease 0.7s;
+    transition: ease var(--animation-duration);
 
     opacity: 0;
     z-index: -1;
@@ -55,7 +55,7 @@
 /* ANIM */
 .modals > div > *{
     opacity: 0;
-    transition: 0.7s ease;
+    transition: var(--animation-duration) ease;
     transform: translateY(50px);
 }
 .modals > div.showed > *{
