--- a/styles/general.css
+++ b/styles/general.css
@@ -24,7 +24,9 @@
 
     --shadow: 0px 0px 23.3px -10px rgba(0, 0, 0, 0.25);
 
-    --size-threshold: 600px; 
+    --size-threshold: 600px;
+
+    --animation-duration: 0.4s;
 }
 @media (min-width: 650px) {
     :root {
@@ -40,7 +42,7 @@ html{
 /* MAIN BACKGROUND */
 body{
     width: 100%;
-    min-height: 100dvh;
+    min-height: 101dvh;
     background: linear-gradient(to top right, var(--primary-color-lighter) 50%, var(--secondary-color-lighter));
     background-repeat: no-repeat;
     background-attachment: fixed;
