--- a/styles/modals.css
+++ b/styles/modals.css
@@ -41,15 +41,15 @@
 .modals > div > p.title{
     font-size: 1.5rem;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .modals > div > p.text{
     font-size: 1rem;
-    margin-bottom: 20px;
 }
 .modals > div > input{
     text-align: center;
     width: 100%;
+    margin-top: 20px;
 }
 
 /* ANIM */
