--- a/src/assets/styles/inputs.css
+++ b/src/assets/styles/inputs.css
@@ -1,125 +1,178 @@
 /* INPUTS */
-input, button, textarea{
-    transition-duration: 0.2s;
-    outline: none;
-    border: none;
-    font-size: 1rem;
-}
-input:focus, button:focus, textarea:focus {
-    box-shadow: 0 0 0px 4px var(--color-primary-transparent);
-}
 .btn-red.green:focus{
     box-shadow: 0 0 0px 4px #10841057 !important;
 }
 
+/* WIDE INPUT */
 .wide{
     width: 100%;
 }
 
 /* BUTTON */
-.icon{
-    font-family: 'Material Symbols Outlined';
-}
-.btn-white > span.icon, .btn-red > span.icon{
-    font-size: 25px;
-    min-width: 50px;
-    min-height: 50px;
-}
-.btn-white, .btn-red{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
+.btn{
+    --main: transparent;
+    --hover: rgba(0, 0, 0, 0.1);
+    --active: rgba(0, 0, 0, 0.2);
+    --text: var(--color-black);
 
-.btn-red{
-    background-color: var(--color-primary);
-    color: white;
+    outline: none;
+    background-color: var(--main);
+    color: var(--text);
     padding: 15px 30px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
     font-size: 1rem;
+    transition-duration: 0.2s;
+    text-decoration: none;
+    gap: 0.5rem;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
+    text-align: center;
 }
-.btn-red:hover{
-    background-color: var(--color-primary-darker);
+.btn:hover{
+    background-color: var(--hover);
 }
-.btn-red.green{
-    background-color: #108410;
+.btn:active{
+    background-color: var(--active);
 }
-.btn-red.green:hover{
-    background-color: #0A6A0A;
-}
-.btn-red > span{
-    margin-right: 10px;
-    min-height: 0 !important;
-    min-width: 0 !important;
-}
-.btn-red.only-icon{
-    padding: 15px;
-}
-.btn-red.only-icon > span{
-    margin: 0;
+.btn:focus{
+    box-shadow: 0 0 0px 4px color-mix(in srgb, var(--main), transparent 50%);
 }
 
-.btn-white{
-    box-shadow: var(--shadow);
-    justify-content: flex-start;
-    background-color: var(--color-white);
+.btn > i{
+    font-family: 'Material Symbols Outlined';
     font-size: 1rem;
-    color: var(--color-black);
+    font-style: normal;
+}
+
+/* PRIMARY BUTTON */
+.btn-primary{
+    --main: var(--color-primary);
+    --hover: var(--color-primary-darker);
+    --active: color-mix(in srgb, var(--color-primary), black 20%);
+    --text: white;
+}
+
+/* GREEN BUTTON */
+.btn-green{
+    --main: #108410;
+    --hover: #0A6A0A;
+    --active: color-mix(in srgb, var(--main), black 20%);
+    --text: white;
+}
+
+/* RED BUTTON */
+.btn-red{
+    --main: var(--color-primary);
+    --hover: var(--color-primary-darker);
+    --active: color-mix(in srgb, var(--main), black 20%);
+    --text: white;
+}
+
+/* ITEM BUTTON */
+.btn-item{
+    --main: var(--color-primary);
+    --text: var(--color-black);
+    background-color: var(--color-white) !important;
+    border: 3px solid transparent !important;
     position: relative;
+    justify-content: flex-start;
+    width: 100%;
     padding: 10px;
     border-radius: 15px;
-    border: 3px solid transparent;
-    cursor: pointer;
+    box-shadow: var(--shadow);
+    gap: 1rem;
 }
-.btn-white > span{
-    margin-right: 10px;
-    color: var(--color-primary);
-    background-color: var(--color-primary-transparent);
-    border-radius: 10px;
-    text-align: center;
-    padding: 10px;
-    font-weight: bold;
-    text-transform: uppercase;
+.btn-item:hover, .btn-item:focus{
+    border: 3px solid var(--color-primary) !important;
 }
-.btn-white:hover, .btn-white:focus{
-    border: 3px solid var(--color-primary)
-}
-.btn-white::after {
+.btn-item::after {
     content: "arrow_forward_ios";
     font-family: 'Material Symbols Outlined';
     display: inline-block;
     vertical-align: middle;
     font-size: 1rem;
-    color: var(--primary-color);
+    color: var(--color-primary);
     position: absolute;
     right: 20px;
 }
-.btn-white.no-arrow::after{
+.btn-item.no-arrow::after{
     display: none;
 }
-.btn-white.only-icon > span{
-    margin: 0;
-    background-color: transparent;
+.btn-item > i{
+    font-family: 'Material Symbols Outlined';
+    font-size: 1.5rem;
+    font-style: normal;
+    min-width: 50px;
+    min-height: 50px;
+    background-color: var(--color-primary-lighter);
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    color: var(--color-primary);
 }
-.btn-white.only-icon{
-    padding: 0;
+.btn-item > span{
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: bold;
+    font-style: normal;
+    background-color: var(--color-primary-lighter);
+    border-radius: 10px;
+    padding: 10px;
+    color: var(--color-primary);
+}
+
+.btn-item.only-icon{
+    padding: 0 !important;
+}
+.btn-item.only-icon > i{
+    background-color: transparent;
+    border-radius: 0;
+}
+.btn-item.only-icon::after{
+    display: none;
 }
 
 /* INPUT */
-input, textarea{
+.input{
     padding: 15px;
     font-size: 1rem;
     border-radius: 10px;
-    background-color: color(--color-white);
+    background-color: var(--color-white);
     border: 2px solid #e7e7e7;
     box-shadow: 0px 0px 23.3px -10px rgba(0, 0, 0, 0.25);
+    transition-duration: 0.2s;
+    outline: none;
+    text-align: center;
 }
-input::placeholder, textarea::placeholder{
+.input::placeholder{
     color: #ADADAD;
 }
-input:focus, textarea:focus{
-    border: 2px solid var(--primary-color);
+.input:focus{
+    border: 2px solid var(--color-primary);
+}
+.input:focus{
+    box-shadow: 0 0 0px 4px var(--color-primary-transparent);
+}
+
+/* LINK */
+.link{
+    color: var(--color-primary);
+    text-decoration: underline;
+    font-size: 1rem;
+    transition-duration: 0.2s;
+    border-radius: 5px;
+    padding: 2px;
+    outline: none;
+}
+.link:hover{
+    color: var(--color-primary-darker);
+}
+.link:focus{
+    color: var(--color-primary-darker);
+    background-color: color-mix(in srgb, var(--color-primary), transparent 80%);
 }
