--- a/src/assets/styles/inputs.css
+++ b/src/assets/styles/inputs.css
@@ -165,7 +165,10 @@
     border: 2px solid var(--color-primary);
 }
 .input:focus{
-    box-shadow: 0 0 0px 4px var(--color-primary-transparent);
+    box-shadow: 0 0 0px 4px var(--color-primary-transparent) !important;
+}
+.input.no-shadow{
+    box-shadow: none;
 }
 
 /* LINK */
